--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8">
             <div>
                 <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
-                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.2.</p>
+                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.3.</p>
             </div>
             <button id="addOrderBtn" class="mt-4 sm:mt-0 bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 a 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
                 Novo Pedido
             </button>
         </header>
@@ -574,7 +574,7 @@
         };
         
         function setupEventListeners() {
-            DOM.app.addEventListener('click', (e) => {
+            document.body.addEventListener('click', (e) => {
                 if (e.target.closest('.view-btn')) viewOrder(e.target.closest('.view-btn').dataset.id);
                 if (e.target.closest('.edit-btn')) editOrder(e.target.closest('.edit-btn').dataset.id);
                 if (e.target.closest('.delete-btn')) deleteOrder(e.target.closest('.delete-btn').dataset.id);
@@ -613,7 +613,7 @@
             onAuthStateChanged(auth, async (user) => {
                 if (user) {
                     userId = user.uid;
-                    dbCollection = collection(db, `users/${userId}/orders`); // CAMINHO CORRIGIDO
+                    dbCollection = collection(db, `users/${userId}/orders`);
                     loadOrders();
                 } else {
                     try { 
