--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8">
             <div>
                 <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
-                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.5.</p>
+                <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.6.</p>
             </div>
             <button id="addOrderBtn" class="mt-4 sm:mt-0 bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
@@ -264,10 +264,10 @@
             const categories = { 'Baby Look': ['PP', 'P', 'M', 'G', 'GG', 'XG'], 'Normal': ['PP', 'P', 'M', 'G', 'GG', 'XG'], 'Infantil': ['2 anos', '4 anos', '6 anos', '8 anos', '10 anos', '12 anos'] };
             let html = '<div class="space-y-4">';
             for (const category in categories) {
-                html += `<div class="p-3 border rounded-md"><h4 class="font-semibold mb-2">${category}</h4><div class="grid grid-cols-3 md:grid-cols-7 gap-2">`;
+                html += `<div class="p-3 border rounded-md"><h4 class="font-semibold mb-2">${category}</h4><div class="grid grid-cols-3 md:grid-cols-6 gap-x-2 gap-y-4">`; // CORREÇÃO AQUI
                 categories[category].forEach(size => {
                     const value = itemsData[category]?.[size] || '';
-                    html += `<div><label class="text-xs text-center block">${size}</label><input type="number" min="0" class="size-input" data-category="${category}" data-size="${size}" value="${value}"></div>`;
+                    html += `<div class="text-center"><label class="text-xs text-gray-600 block mb-1">${size}</label><input type="number" min="0" class="size-input" data-category="${category}" data-size="${size}" value="${value}"></div>`; // CORREÇÃO AQUI
                 });
                 html += `</div></div>`;
             }
@@ -466,7 +466,7 @@
                 itemsHtml = Object.entries(order.items || {}).map(([category, sizes]) => {
                     const sizeEntries = Object.entries(sizes);
                     if (sizeEntries.length === 0) return '';
-                    return `<div class="mt-3"><h4 class="font-semibold">${category}</h4><div class="flex flex-wrap gap-2 text-sm">${sizeEntries.map(([size, qty]) => `<span class="bg-gray-100 px-2 py-1 rounded">${size}: ${qty}</span>`).join('')}</div></div>`
+                    return `<div class="mt-3"><h4 class="font-semibold">${category}</h4><div class="flex flex-wrap gap-x-4 gap-y-2 text-sm">${sizeEntries.map(([size, qty]) => `<span class="bg-gray-100 px-2 py-1 rounded">${size}: ${qty}</span>`).join('')}</div></div>` // CORREÇÃO AQUI
                 }).join('');
             } else {
                 itemsHtml = `<table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Tamanho</th><th class="px-2 py-1">Nome</th><th class="px-2 py-1">Número</th></tr></thead><tbody>
@@ -570,7 +570,6 @@
                 DOM.ordersList.innerHTML = '';
                 allOrders = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
 
-                // Ordenar por data de entrega
                 allOrders.sort((a, b) => {
                     const dateA = a.deliveryDate ? new Date(a.deliveryDate) : new Date('9999-12-31');
                     const dateB = b.deliveryDate ? new Date(b.deliveryDate) : new Date('9999-12-31');
