--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-8">
       <div>
         <h1 class="text-3xl font-bold text-gray-900">Gerenciador de Pedidos</h1>
-        <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.2.</p>
+        <p class="text-gray-600 mt-1">Sua ferramenta de gestão de fardamentos 1.3.</p>
       </div>
       <button id="addOrderBtn" class="mt-4 sm:mt-0 bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition duration-300 flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
@@ -298,7 +298,7 @@
     const resetForm = () => {
       partCounter=0;
       DOM.orderForm.reset();
-      DOM.partsContainer.innerHTML='';
+      DOM.partsContainer.innerHTML='';  
       DOM.financialsContainer.innerHTML='';
       document.getElementById('orderId').value='';
       document.getElementById('orderId').dataset.existingUrls='[]';
@@ -446,9 +446,9 @@
           return `<div class="mt-3"><h4 class="font-semibold">${cat}</h4><div class="flex flex-wrap gap-x-4 gap-y-2 text-sm">${ents.map(([sz,qt])=>`<span class="bg-gray-100 px-2 py-1 rounded">${sz}: ${qt}</span>`).join('')}</div></div>`;
         }).join('');
       } else {
-        itemsHtml=`<table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Tamanho</th><th class="px-2 py-1">Nome</th><th class="px-2 py-1">Número</th></tr></thead><tbody>`+
-          (o.items||[]).map(i=>`<tr><td class="border px-2 py-1">${i.type}</td><td class="border px-2 py-1">${i.size}</td><td class="border px-2 py-1">${i.name}</td><td class="border px-2 py-1">${i.number}</td></tr>`).join('')+
-        `</tbody></table>`;
+        itemsHtml=`<table class="w-full text-left text-sm mt-2"><thead><tr class="bg-gray-100"><th class="px-2 py-1">Tipo</th><th class="px-2 py-1">Tamanho</th><th class="px-2 py-1">Nome</th><th class="px-2 py-1">Número</th></tr></thead><tbody>` +
+          (o.items||[]).map(i=>`<tr><td class="border px-2 py-1">${i.type}</td><td class="border px-2 py-1">${i.size}</td><td class="border px-2 py-1">${i.name}</td><td class="border px-2 py-1">${i.number}</td></tr>`).join('') +
+          `</tbody></table>`;
       }
       const printable = `
 <div class="bg-white rounded-xl shadow-2xl w-full max-w-4xl max-h-[95vh] flex flex-col">
@@ -508,7 +508,7 @@
           pdf.addImage(img,'PNG',10,pos,w,h);
           left-=(ph-20);
         }
-        pdf.save(`Pedido_${cn.replace(/\s/g,'_')}.pdf`);
+        pdf.save(`Pedido_${cn.replace(/\\s/g,'_')}.pdf`);
       } catch(e){ console.error('PDF:',e); alert('Não foi possível gerar o PDF.'); }
     };
 
@@ -599,7 +599,7 @@
       onAuthStateChanged(auth,async user=>{
         if(user){
           userId=user.uid;
-          dbCollection=collection(db,`users/${userId}/orders`);
+          dbCollection=collection(db,\`users/\${userId}/orders\`);
           loadOrders();
         } else {
           try{ await signInAnonymously(auth); }
